--- a/meteor/meteor.csproj
+++ b/meteor/meteor.csproj
@@ -20,5 +20,10 @@
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.10"/>
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.10"/>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0-preview.5.24306.7"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Folder Include="Assets\Fonts\SanFrancisco\"/>
     </ItemGroup>
 </Project>
