--- a/meteor/meteor.csproj
+++ b/meteor/meteor.csproj
@@ -21,6 +21,8 @@
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.10"/>
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.10"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0-preview.5.24306.7"/>
+        <PackageReference Include="Projektanker.Icons.Avalonia" Version="9.3.0"/>
+        <PackageReference Include="Projektanker.Icons.Avalonia.FontAwesome" Version="9.3.0"/>
     </ItemGroup>
 
     <ItemGroup>
