--- a/meteor/meteor.csproj
+++ b/meteor/meteor.csproj
@@ -24,6 +24,7 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0-preview.5.24306.7"/>
         <PackageReference Include="Projektanker.Icons.Avalonia" Version="9.3.0"/>
         <PackageReference Include="Projektanker.Icons.Avalonia.FontAwesome" Version="9.3.0"/>
+        <PackageReference Include="xunit" Version="2.8.1"/>
     </ItemGroup>
 
     <ItemGroup>
