--- a/meteor/meteor.csproj
+++ b/meteor/meteor.csproj
@@ -22,6 +22,7 @@
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.10"/>
         <PackageReference Include="DiffPlex" Version="1.7.2"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0-preview.5.24306.7"/>
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0-preview.5.24306.7"/>
         <PackageReference Include="Projektanker.Icons.Avalonia" Version="9.3.0"/>
         <PackageReference Include="Projektanker.Icons.Avalonia.FontAwesome" Version="9.3.0"/>
         <PackageReference Include="xunit" Version="2.8.1"/>
