--- a/meteor/meteor.csproj
+++ b/meteor/meteor.csproj
@@ -22,6 +22,7 @@
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.10"/>
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.10"/>
         <PackageReference Include="DiffPlex" Version="1.7.2"/>
+        <PackageReference Include="ICSharpCode.SharpZipLib.dll" Version="0.85.4.369"/>
         <PackageReference Include="LanguageServerProtocol" Version="7.0.1"/>
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="8.0.0"/>
@@ -48,5 +49,6 @@
         <None Update="appsettings.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Remove="languageServers.json"/>
     </ItemGroup>
 </Project>
