--- a/meteor.ViewModels/meteor.ViewModels.csproj
+++ b/meteor.ViewModels/meteor.ViewModels.csproj
@@ -6,6 +6,9 @@
   </ItemGroup>
 
   <ItemGroup>
+      <Reference Include="Microsoft.Extensions.Logging.Abstractions">
+          <HintPath>..\..\..\..\.nuget\packages\microsoft.extensions.logging.abstractions\9.0.0-preview.6.24327.7\lib\net9.0\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
+      </Reference>
     <Reference Include="ReactiveUI">
       <HintPath>..\..\..\..\.nuget\packages\reactiveui\18.3.1\lib\net6.0\ReactiveUI.dll</HintPath>
     </Reference>
