--- a/meteor.Services.Tests/meteor.Services.Tests.csproj
+++ b/meteor.Services.Tests/meteor.Services.Tests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+      <PackageReference Include="Castle.Core" Version="5.1.1"/>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
     <PackageReference Include="xunit" Version="2.6.6" />
@@ -21,5 +22,14 @@
   <ItemGroup>
     <ProjectReference Include="..\meteor.Services\meteor.Services.csproj" />
   </ItemGroup>
+
+    <ItemGroup>
+        <Reference Include="Microsoft.Extensions.Logging.Abstractions">
+            <HintPath>..\..\..\..\.nuget\packages\microsoft.extensions.logging.abstractions\9.0.0-preview.6.24327.7\lib\net9.0\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
+        </Reference>
+        <Reference Include="Moq">
+            <HintPath>..\..\..\..\.nuget\packages\moq\4.20.70\lib\net6.0\Moq.dll</HintPath>
+        </Reference>
+    </ItemGroup>
 
 </Project>
