--- a/meteor.UI.Tests/meteor.UI.Tests.csproj
+++ b/meteor.UI.Tests/meteor.UI.Tests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+      <PackageReference Include="Castle.Core" Version="5.1.1"/>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
     <PackageReference Include="xunit" Version="2.6.6" />
