--- a/meteor.Core.Tests/meteor.Core.Tests.csproj
+++ b/meteor.Core.Tests/meteor.Core.Tests.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
       <PackageReference Include="Castle.Core" Version="5.1.1"/>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.0-preview.6.24327.7"/>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
     <PackageReference Include="xunit" Version="2.6.6" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.6" />
@@ -24,6 +25,9 @@
   </ItemGroup>
 
     <ItemGroup>
+        <Reference Include="Microsoft.Extensions.Logging">
+            <HintPath>..\..\..\..\.nuget\packages\microsoft.extensions.logging\9.0.0-preview.6.24327.7\lib\net9.0\Microsoft.Extensions.Logging.dll</HintPath>
+        </Reference>
         <Reference Include="Microsoft.Extensions.Logging.Abstractions">
             <HintPath>..\..\..\..\.nuget\packages\microsoft.extensions.logging.abstractions\9.0.0-preview.6.24327.7\lib\net9.0\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
         </Reference>
