--- a/meteor.Services.Tests/meteor.Services.Tests.csproj
+++ b/meteor.Services.Tests/meteor.Services.Tests.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
       <PackageReference Include="Castle.Core" Version="5.1.1"/>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0-preview.6.24327.7"/>
+      <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="9.0.0-preview.6.24327.7"/>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
     <PackageReference Include="xunit" Version="2.6.6" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.6" />
