--- a/meteor.IntegrationTests/meteor.IntegrationTests.csproj
+++ b/meteor.IntegrationTests/meteor.IntegrationTests.csproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Avalonia.Headless.XUnit" Version="11.1.0-rc2"/>
         <PackageReference Include="Castle.Core" Version="5.1.1" />
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
