--- a/tests/meteor.UnitTests/meteor.UnitTests.csproj
+++ b/tests/meteor.UnitTests/meteor.UnitTests.csproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Avalonia.Headless.XUnit" Version="11.1.0-rc2"/>
         <PackageReference Include="Castle.Core" Version="5.1.1" />
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
@@ -28,6 +29,9 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Reference Include="Avalonia.Headless.XUnit">
+            <HintPath>..\..\..\..\..\.nuget\packages\avalonia.headless.xunit\11.1.0-rc2\lib\net8.0\Avalonia.Headless.XUnit.dll</HintPath>
+        </Reference>
       <Reference Include="Moq">
         <HintPath>..\..\..\..\..\.nuget\packages\moq\4.20.70\lib\net6.0\Moq.dll</HintPath>
       </Reference>
