--- a/src/meteor.Application/meteor.Application.csproj
+++ b/src/meteor.Application/meteor.Application.csproj
@@ -4,7 +4,11 @@
     <ProjectReference Include="..\meteor.Core\meteor.Core.csproj" />
   </ItemGroup>
 
-  <PropertyGroup>
+    <ItemGroup>
+        <Folder Include="Interfaces\"/>
+    </ItemGroup>
+
+    <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
