rope optimizations, actually use the rope

--- a/src/meteor.Infrastructure/meteor.Infrastructure.csproj
+++ b/src/meteor.Infrastructure/meteor.Infrastructure.csproj
@@ -10,4 +10,8 @@
         <ProjectReference Include="..\meteor.Core\meteor.Core.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <Folder Include="Data\"/>
+    </ItemGroup>
+
 </Project>
