--- a/meteor/src/meteor.UI/meteor.UI.csproj
+++ b/meteor/src/meteor.UI/meteor.UI.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <AvaloniaResource Include="Assets\avalonia-logo.ico" />
+        <AvaloniaResource Include="Common\Assets\avalonia-logo.ico"/>
     </ItemGroup>
 
     <ItemGroup>
@@ -39,10 +39,23 @@
 
     <ItemGroup>
         <Folder Include="Assets\Fonts\FontAwesome\"/>
+        <Folder Include="Features/"/>
+        <Folder Include="Features/Editor/"/>
+        <Folder Include="Features/Editor/Controls/"/>
+        <Folder Include="Features/Editor/Services/"/>
+        <Folder Include="Features/Editor/ViewModels/"/>
+        <Folder Include="Features/FileExplorer/"/>
+        <Folder Include="Features/FileExplorer/Controls/"/>
+        <Folder Include="Features/FileExplorer/Services/"/>
+        <Folder Include="Features/FileExplorer/ViewModels/"/>
+        <Folder Include="Features/Tabs/"/>
+        <Folder Include="Features/Tabs/Controls/"/>
+        <Folder Include="Features/Tabs/Services/"/>
+        <Folder Include="Features/Tabs/ViewModels/"/>
     </ItemGroup>
 
     <ItemGroup>
-        <AvaloniaResource Include="Assets/Fonts/SanFrancisco/*.otf"/>
+        <AvaloniaResource Include="Common/Assets/Fonts/SanFrancisco/*.otf"/>
     </ItemGroup>
 
 </Project>
