settings file and service

--- a/meteor/src/meteor/meteor.csproj
+++ b/meteor/src/meteor/meteor.csproj
@@ -32,4 +32,10 @@
     <ItemGroup>
         <ProjectReference Include="..\meteor.UI\meteor.UI.csproj"/>
     </ItemGroup>
+
+    <ItemGroup>
+        <None Include="settings.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
 </Project>
