--- a/meteor/.github/workflows/build.yaml
+++ b/meteor/.github/workflows/build.yaml
@@ -31,7 +31,7 @@ jobs:
         dotnet-version: 8.0.x
     
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore src/meteor/meteor.csproj
     
     - name: Build
       run: dotnet build --configuration Release --no-restore
