--- a/meteor/.github/workflows/build.yaml
+++ b/meteor/.github/workflows/build.yaml
@@ -29,9 +29,10 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+        
     
     - name: Restore dependencies
-      run: dotnet restore meteor.sln
+      run: cd src/meteor && dotnet restore
     
     - name: Build
       run: dotnet build --configuration Release --no-restore
