fixed build yaml restore path

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,7 +31,7 @@ jobs:
           dotnet-version: 8.0.x
 
       - name: Restore dependencies
-        run: dotnet restore meteor.sln
+        run: dotnet restore meteor/src/meteor.sln
 
       - name: Build
         run: dotnet build --configuration Release --no-restore
