--- a/meteor/src/meteor/meteor.csproj
+++ b/meteor/src/meteor/meteor.csproj
@@ -38,4 +38,10 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
+
+    <ItemGroup>
+  <Content Include="runtimes\**\*">
+    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+  </Content>
+</ItemGroup>
 </Project>
