--- a/meteor/src/meteor/meteor.csproj
+++ b/meteor/src/meteor/meteor.csproj
@@ -40,8 +40,8 @@
     </ItemGroup>
 
     <ItemGroup>
-  <Content Include="runtimes\**\*">
-    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-  </Content>
-</ItemGroup>
+        <Content Include="$(OutputPath)../../../../meteor-rust-core/target/release/libmeteor_rust_core.*">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
 </Project>
