--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,8 +9,6 @@ on:
 
 jobs:
   build:
-    permissions:
-      contents: write
     strategy:
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest]
@@ -47,17 +45,6 @@ jobs:
           cd meteor/src/meteor-rust-core
           cargo build --release --target ${{ matrix.rust_target }}
 
-      - name: Copy Rust library to .NET project
-        run: |
-          mkdir -p meteor/src/meteor/bin/Release/net8.0/runtimes/${{ matrix.output_name }}/native
-          if [ "${{ matrix.os }}" == "windows-latest" ]; then
-            cp meteor/src/meteor-rust-core/target/${{ matrix.rust_target }}/release/meteor_rust_core.dll meteor/src/meteor/bin/Release/net8.0/runtimes/win-x64/native/
-          elif [ "${{ matrix.os }}" == "macos-latest" ]; then
-            cp meteor/src/meteor-rust-core/target/${{ matrix.rust_target }}/release/libmeteor_rust_core.dylib meteor/src/meteor/bin/Release/net8.0/runtimes/osx-x64/native/
-          else
-            cp meteor/src/meteor-rust-core/target/${{ matrix.rust_target }}/release/libmeteor_rust_core.so meteor/src/meteor/bin/Release/net8.0/runtimes/linux-x64/native/
-          fi
-
       - name: Restore dependencies
         run: dotnet restore meteor/src/meteor.sln
 
@@ -67,16 +54,6 @@ jobs:
       - name: Publish
         run: dotnet publish meteor/src/meteor/meteor.csproj -c Release -r ${{ matrix.output_name }} --self-contained -o publish/${{ matrix.output_name }}
 
-      - name: Copy Rust library to publish directory
-        run: |
-          if [ "${{ matrix.os }}" == "windows-latest" ]; then
-            cp meteor/src/meteor-rust-core/target/${{ matrix.rust_target }}/release/meteor_rust_core.dll publish/${{ matrix.output_name }}/
-          elif [ "${{ matrix.os }}" == "macos-latest" ]; then
-            cp meteor/src/meteor-rust-core/target/${{ matrix.rust_target }}/release/libmeteor_rust_core.dylib publish/${{ matrix.output_name }}/
-          else
-            cp meteor/src/meteor-rust-core/target/${{ matrix.rust_target }}/release/libmeteor_rust_core.so publish/${{ matrix.output_name }}/
-          fi
-
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
@@ -84,8 +61,6 @@ jobs:
           path: publish/${{ matrix.output_name }}
 
   create-release:
-    permissions:
-      contents: write
     needs: build
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -97,7 +72,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: v${{ github.run_number }}
           release_name: Release ${{ github.run_number }}
@@ -109,7 +84,7 @@ jobs:
       - name: Upload Release Asset Windows
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./win-x64/meteor.exe
@@ -119,7 +94,7 @@ jobs:
       - name: Upload Release Asset macOS
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./osx-x64/meteor
@@ -129,7 +104,7 @@ jobs:
       - name: Upload Release Asset Linux
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./linux-x64/meteor
