revert build.yaml

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -100,8 +100,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./osx/meteor
-          asset_name: meteor-osx-arm
+          asset_path: ./osx-x64/meteor
+          asset_name: meteor-osx-x64
           asset_content_type: application/octet-stream
 
       - name: Upload Release Asset Linux
