--- a/meteor/src/meteor/meteor.csproj
+++ b/meteor/src/meteor/meteor.csproj
@@ -25,7 +25,6 @@
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.0"/>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0-preview.6.24327.7"/>
-        <PackageReference Include="SkiaSharp.NativeAssets.macOS" Version="2.88.3" />
     </ItemGroup>
 
     <ItemGroup>
@@ -49,4 +48,11 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
     </ItemGroup>
+
+    <Target Name="CopyThemes" AfterTargets="Build">
+        <ItemGroup>
+            <ThemeFiles Include="..\meteor.UI\Common\Themes\*.json" />
+        </ItemGroup>
+        <Copy SourceFiles="@(ThemeFiles)" DestinationFolder="$(OutDir)Common\Themes" />
+    </Target>
 </Project>
