--- a/meteor/src/meteor.UI/meteor.UI.csproj
+++ b/meteor/src/meteor.UI/meteor.UI.csproj
@@ -56,6 +56,7 @@
 
     <ItemGroup>
         <AvaloniaResource Include="Common/Assets/Fonts/SanFrancisco/*.otf"/>
+        <AvaloniaResource Include="Common/Assets/Fonts/FontAwesome/*.otf"/>
     </ItemGroup>
 
 </Project>
