save settings on change and restore on app startup

--- a/meteor/src/meteor/meteor.csproj
+++ b/meteor/src/meteor/meteor.csproj
@@ -10,7 +10,7 @@
         <RuntimeIdentifiers>win-x64;osx-x64;linux-x64</RuntimeIdentifiers>
         <PublishTrimmed>true</PublishTrimmed>
         <TrimMode>link</TrimMode>
-        <JsonSerializerIsReflectionEnabledByDefault>false</JsonSerializerIsReflectionEnabledByDefault>
+        <JsonSerializerIsReflectionEnabledByDefault>true</JsonSerializerIsReflectionEnabledByDefault>
         <BuildRustLibrary Condition="'$(BuildRustLibrary)' == ''">true</BuildRustLibrary>
     </PropertyGroup>
 
